Bug 180169 ASSERTION: RgnRectMemoryAllocator not thread-safe triggers because static class exists past nspr shutdown r=roc+moz sr=roc+moz